# Snibble

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README_DOCKER.md  build-docker.sh  docker-compose.yml
src/: MAIN_WINDOW.md  main.cpp  mainwindow.h
src/backend/: AUTH_MANAGER.md  AuthManager.cpp  AuthManager.h  ENCRYPTION_DECRYPTION.md  Encryption_Decryption.cpp  Encryption_Decryption.h  MESSAGE_HANDLER.md  MessageHandler.cpp  MessageHandler.h  NETWORK_MANAGER.md  NetworkManager.cpp  NetworkManager.h
src/ui/: AUTH_WINDOW.md  AuthWindow.cpp  AuthWindow.h  CHAT_WINDOW.md  ChatWindow.cpp  ChatWindow.h
